@@ -41,10 +41,10 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-mainClassName = 'com.sunkenpotato.client2p.MainApplication'
+mainClassName = 'com.sunkenpotato.homebase.MainApplication'
 
 application {
-    mainModule = 'com.sunkenpotato.client2p'
+    mainModule = 'com.sunkenpotato.homebase'
     mainClass = mainClassName
 }
 
@@ -65,6 +65,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+    implementation group: 'com.dlsc.preferencesfx', name: 'preferencesfx-core', version: '11.12.0'
+
+    implementation "org.openjfx:javafx-controls:21"
+    implementation "org.openjfx:javafx-fxml:21"
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
@@ -90,11 +94,32 @@ kotlin {
     jvmToolchain(21)
 }
 
-tasks.register('packageMyApp', PackageTask) {
+tasks.register('packageWindows', PackageTask) {
     dependsOn build
     mainClass = mainClassName
     bundleJre = true
     customizedJre = true
-    modules = ['javafx.controls', 'javafx.fxml']
+//    modules = ['javafx.controls', 'javafx.fxml']
+    platform = 'windows'
+    vmArgs = [ '--add-modules=javafx.controls,javafx.fxml', '--module-path=libs' ]
 }
 
+tasks.register('packageOSX', PackageTask) {
+    dependsOn build
+    mainClass = mainClassName
+    bundleJre = true
+    customizedJre = true
+//    modules = ['javafx.controls', 'javafx.fxml']
+    platform = 'mac'
+    vmArgs = ['--add-modules=javafx.controls,javafx.fxml', '--module-path=libs']
+}
+
+tasks.register('packageLinux', PackageTask) {
+    dependsOn build
+    mainClass = mainClassName
+    bundleJre = true
+    customizedJre = true
+//    modules = ['javafx.controls', 'javafx.fxml']
+    platform = 'linux'
+    vmArgs = ['--add-modules=javafx.controls,javafx.fxml', '--module-path=libs']
+}
